# vrita

./: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  Vrita.slnx  Vrita.vcxproj  Vrita.vcxproj.filters  app_settings.ini  apu_optimizations.md  gui_options.ini  main.cpp  vcpkg.json
debuggers/: debugger_assembly.cpp  debuggers_defines.hpp  debuggers_defines_agb.hpp  debuggers_defines_cgb.inl  debuggers_defines_dmg.hpp  debuggers_defines_dmg.inl  palette_viewer.cpp  palette_viewer.hpp  sprite_viewer.cpp  sprite_viewer.hpp  tile_viewer.cpp  tile_viewer.hpp  tilemap_viewer.cpp  tilemap_viewer.hpp
emulators/: emulators.cpp  emulators.hpp
emulators/agb/: agb.cpp  agb.hpp
emulators/debuggers/: debugger.cpp  debugger.hpp  debugger_registers.cpp  debuggers_defines.hpp  debuggers_defines_agb.inl  debuggers_defines_cgb.hpp  debuggers_defines_dmg.hpp  debuggers_defines_dmg.inl  memory_editor.cpp  memory_editor.hpp  memory_editor_agb.hpp  memory_editor_cgb.hpp  memory_editor_data.hpp  memory_editor_dmg.hpp  memoryeditor.cpp  memoryeditor.hpp  memoryviewer.cpp  memoryviewer.hpp  palette_viewer.cpp  palette_viewer.hpp  palette_viewer_dmg.hpp  paletteviewer.cpp  sprite_viewer.cpp  sprite_viewer.hpp  spriteviewer.cpp  spriteviewer.hpp  tile_viewer.cpp  tile_viewer.hpp  tilemap_viewer.cpp  tilemap_viewer.hpp  tilemapviewer.cpp  tilemapviewer.hpp  tileviewer.cpp  tileviewer.hpp
emulators/dmg/: apu.cpp  apu.hpp  apu_mixer.cpp  apu_noise.cpp  apu_pulse.cpp  apu_registers.cpp  apu_structs.hpp  apu_wave.cpp  cartridge.cpp  cartridge.hpp  cpu.cpp  cpu.hpp  cpu_extended.cpp  cpu_normal.cpp  cpu_registers.hpp  dmg.cpp  dmg.hpp  instructions_16bit.cpp  instructions_8bit.cpp  interrupt.cpp  interrupt.hpp  joypad.cpp  joypad.hpp  mbc.hpp  mmu.cpp  mmu.hpp  palette_presets.hpp  ppu.cpp  ppu.hpp  timer.cpp  timer.hpp
eyecandy/: dots.cpp  dots.hpp
gui/: filebrowser.cpp  filebrowser.hpp  log.cpp  log.hpp
include/: agb.hpp  code.hpp  datetimes.hpp  dmg.hpp  emulators.hpp  filebrowser.hpp  files.hpp  includes.hpp  logger.hpp
include/agb/: agb.hpp
include/dmg/: apu.hpp  cartridge.hpp  cpu.hpp  dmg.hpp  mmu.hpp  ppu.hpp  timer.hpp
include/gui/: filebrowser.hpp  log.hpp
resources/: Vrita.icns  Vrita.rc
src/: agb.cpp  dmg.cpp  dots.cpp  emulators.cpp  filebrowser.cpp  vrita.cpp
src/agb/: agb.cpp
src/dmg/: apu.cpp  cartridge.cpp  cpu.cpp  dmg.cpp  mmu.cpp  ppu.cpp  timer.cpp
src/gui/: filebrowser.cpp  log.cpp
utilities/: logger.hpp  settings.hpp  strings.hpp
utilities/iconfonts/: IconsFontAwesome7.h
